[package]
name = "linear-gitea-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
dotenv = "0.15.0"
env_logger = "0.11.3"
envy = "0.4.2"
log = { version = "0.4.21", features = ["serde"] }
reqwest = { version = "0.12.3", features = ["json", "multipart"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["test-util", "macros", "full"] }
anyhow = "1.0.81"
thiserror = "1.0.58"
actix-cors = "0.7.0"
